--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "url": "git@github.com:nervjs/taro-ui.git"
   },
   "license": "MIT",
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
@@ -32,6 +27,7 @@
     "eslint": "^6.8.0",
     "eslint-config-o2team": "^0.1.7",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-config-taro": "^3.3.0-beta.1",
     "eslint-import-resolver-custom-alias": "^1.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
