--- a/packages/taro-ui/tsconfig.build.json
+++ b/packages/taro-ui/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "es6",
-    "outDir": "./lib"
+    // "outDir": "./lib"
+    "outDir": "../taro-ui-demo/src/taro-ui",
   },
   "include": [
     "src/**/*"
